<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_screen"
        android:id="@+id/heading"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginBottom="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/signUpInStuff">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mEmailField"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mPasswordField"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="textPassword"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mStatusTextView"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mDetailTextView"
        android:layout_margin="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="@string/register"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone"
        android:layout_marginBottom="15dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createAccTV"
        android:text="@string/not_registered_yet_sign_up"
        android:gravity="center"
        android:textSize="17sp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="alreadyRegistered"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginTV"
        android:text="@string/already_registered_back_to_login"
        android:gravity="center"
        android:textSize="17sp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:onClick="loginScreen"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/accountStuff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone"
        android:weightSum="2.0"
        android:gravity="center">

        <Button
            android:id="@+id/signOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/sign_out"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/verifyEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/verify_email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </LinearLayout>
</LinearLayout>